# snapdev

./: CMakeLists.txt  README.md  mk
cmake/: CMakeLists.txt  SnapDevConfig.cmake
debian/: changelog  control  copyright  rules  snapdev.install
dev/: coverage  index.php
doc/: CMakeLists.txt  snapdev-doc.css  snapdev.doxy.in
snapdev/: CMakeLists.txt  as_root.h  brs.h  callback_manager.h  case_insensitive_string.h  caseinsensitivestring.h  chownnm.h  clocale.h  concat_strings.h  empty_set_intersection.h  enum_class_math.h  enumerate.h  escape_special_regex_characters.h  file_contents.h  floating_point_to_string.h  gethostname.h  glob_to_list.h  has_member_function.h  hexadecimal_string.h  init_structure.h  int128_literal.h  is_nonnull.h  is_smart_pointer.h  is_string_literal.h  is_vector.h  isatty.h  join_strings.h  limits_int128.h  lockfile.h  log2.h  map_keyset.h  math.h  matrix.h  memory_streambuf.h  memsearch.h  mkdir_p.h  mounts.h  not_reached.h  not_used.h  number_to_string.h  (+40 more)
tests/: CMakeLists.txt  catch2_main.cpp  catch_as_root.cpp  catch_assert.cpp  catch_brs.cpp  catch_callback_manager.cpp  catch_change_owner.cpp  catch_concat_strings.cpp  catch_escape_special_regex_characters.cpp  catch_file_contents.cpp  catch_floating_point_to_string.cpp  catch_glob_to_list.cpp  catch_hexadecimal_string.cpp  catch_int128.cpp  catch_is_string_literal.cpp  catch_isatty.cpp  catch_join_strings.cpp  catch_lockfile.cpp  catch_log2.cpp  catch_main.cpp  catch_main.h  catch_matrix.cpp  catch_memory_streambuf.cpp  catch_memsearch.cpp  catch_mkdir_p.cpp  catch_not_reached.cpp  catch_not_used.cpp  catch_number_to_string.cpp  catch_pathinfo.cpp  catch_remove_duplicates.cpp  catch_rm_r.cpp  catch_safe_object.cpp  catch_safe_stream.cpp  catch_saturated_add.cpp  catch_saturated_subtract.cpp  catch_string_literal_length.cpp  catch_string_replace_many.cpp  catch_string_replace_variables.cpp  catch_stringize.cpp  catch_timespec_ex.cpp  (+17 more)
tools/: CMakeLists.txt  c++regex.cpp  int128.cpp  snapmatrix.cpp
